# webencodings

./: README.rst  mklabels.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py
tests/: test_webencodings.py
webencodings/: __init__.py  custom.py  labels.py  mklabels.py  tests.py  x_user_defined.py
