[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'webencodings'
description = 'Character encoding aliases for legacy web content'
keywords = ['web', 'encoding']
authors = [{name = 'Simon Sapin', email = 'simon.sapin@exyr.org'}]
maintainers = [{name = 'Sam Sneddon', email = 'me@gsnedders.com'}]
requires-python = '>=3.8'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/gsnedders/python-webencodings'
Documentation = 'http://packages.python.org/webencodings/'
Code = 'https://github.com/gsnedders/python-webencodings'
Issues = 'https://github.com/gsnedders/python-webencodings/issues'
Changelog = 'https://github.com/gsnedders/python-webencodings/releases'

[project.optional-dependencies]
doc = ['sphinx']
test = ['pytest', 'ruff']

[tool.flit.sdist]
exclude = ['.*']

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'N', 'RUF']
ignore = ['RUF001', 'RUF002', 'RUF003']
